<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LinkUp</string>
    <string name="welcome_text">Welcome to our Community!</string>
    <string name="signin_button">Sign In</string>
    <string name="signuppreview">No Account? Click HERE to sign up!</string>
    <string name="signuplink">Here</string>
    <string name="loginLink">Here</string>
    <string name="create_account_link">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="Conpassword">Create Password</string>
    <string name="rectback">TODO</string>
    <string name="signup_name">SignUp</string>
    <string name="email">Email</string>
    <string name="cpass">Password</string>
    <string name="confirmpass">Confirm your password</string>
    <string name="confirmuser">Username</string>
    <string name="backtolog">Already have an account? Click HERE to sign in!</string>
    <string name="SignupTitle">Let\'s get you signed up!</string>
    <string name="create_account">Create Account</string>
    <string name="Delete_text">Are you sure you want to delete your Account?</string>
    <string name="D_No">No</string>
    <string name="D_yes">Yes</string>
    <string name="D_reason">Reason why you are leaving? (Optional)</string>
    <string name="emabutton">Edit my account</string>
    <string name="accounttitle">Account Information:</string>
    <string name="displayuser">Username:</string>
    <string name="displayemail">Email:</string>
    <string name="biotitle">Your Bio: </string>
    <string name="biotext">Tell us about yourself</string>
    <string name="tempuser">Disusnamhere</string>
    <string name="tempemail">Disemahere</string>
    <string name="tempbio">Disuserbiohere</string>
    <string name="eacctitle">Edit Account Info: </string>
    <string name="nemail">New email</string>
    <string name="cusername">Create Username</string>
    <string name="cpassword">Create Password</string>
    <string name="saveP">Save Profile</string>
    <string name="deletebut">Delete Account</string>
    <string name="CpostTitle">Create Post</string>
    <string name="poster">Create Post</string>
    <string name="Goback">Back to Home Page</string>
    <string name="CpostName">Post Title</string>
    <string name="Cpostdescription">What is your post About? Please be descriptive!</string>
    <string name="signin_error">Username or Password Incorrect. Please try again. </string>
    <string name="AccountButtonText">Account</string>
    <string name="CreatePostButton">Create Post</string>
    <string name="LogoutButton">Logout</string>
    <string name="Temppostdescrip">Temppostdescrip</string>
    <string name="Temppostitle">Temppostname</string>
    <string name="NullPostText">There is no Post here at this time</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="submit">Submit</string>
</resources>
