<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".AccountActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="358dp"
            android:layout_height="599dp"
            android:contentDescription="@string/rectback"
            android:src="@drawable/rounded_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/cea"
            style="@style/CustomButtonStyleBack"
            android:layout_width="103dp"
            android:layout_height="48dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="@+id/edit_account"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toEndOf="@id/edit_account"
            app:layout_constraintTop_toTopOf="@+id/edit_account" />

        <Button
            android:id="@+id/edit_account"
            style="@style/CustomButtonStyle"
            android:layout_width="165dp"
            android:layout_height="53dp"

            android:text="@string/emabutton"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/cea"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/bioView"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/accounttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounttitle"
            android:textColor="#424242"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/displayuser"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/displayemail"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/displayemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/displayemail"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/biotitle"
            app:layout_constraintTop_toBottomOf="@+id/displayuser" />

        <TextView
            android:id="@+id/biotitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:text="@string/biotitle"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/bioView"
            app:layout_constraintStart_toStartOf="@+id/bioView" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

        <TextView
            android:id="@+id/usnView"
            android:layout_width="181dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:text="@string/tempuser"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/displayuser"
            app:layout_constraintTop_toTopOf="@+id/displayuser"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="184dp"
            android:layout_height="34dp"
            android:layout_marginStart="4dp"
            android:text="@string/tempemail"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/displayemail"
            app:layout_constraintTop_toTopOf="@+id/displayemail"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/bioView"
            android:layout_width="320dp"
            android:layout_height="216dp"
            android:layout_marginTop="47dp"
            android:background="@drawable/rounded_border"
            android:padding="12dp"
            android:text="@string/tempbio"
            app:layout_constraintBottom_toTopOf="@id/edit_account"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textView2,displayemail" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="usnView,displayuser" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="biotitle,bioView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
